# data-wagon-pioneers

./: .gitignore  Hackathon - baseline and metric scripts.ipynb  README.md  pyproject.toml
model/: train_pred.py
notebook/: EDA_v0.ipynb  Hackathon - baseline and metric scripts.ipynb  predict_v1.ipynb
utils/: data_process.py  forecast_prep.py
