[tool.poetry]
name = "data-wagon-pioneers"
version = "0.1.0"
description = ""
authors = ["Ivan Andriushin <i.andryushin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.1.0"
statsforecast = "^1.6.0"
hierarchicalforecast = "^0.4.0"
mlforecast = "^0.11.0"
neuralforecast = "^1.6.4"
notebook = "^7.0.6"
jupyterlab = "^4.0.8"
jupyter-contrib-nbextensions = "^0.7.0"
poetry = "^1.7.0"
seaborn = "^0.13.0"
polars = "^0.19.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
