[tool.poetry]
name = "data-wagon-pioneers"
version = "0.1.0"
description = ""
authors = ["Ivan Andriushin <i.andryushin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.1.0"
statsforecast = "^1.6.0"
hierarchicalforecast = "0.4.0"
mlforecast = "^0.11.0"
neuralforecast = "^1.6.4"
notebook = "6.4.12"
jupyterlab = "^4.0.8"
jupyter-contrib-nbextensions = "^0.7.0"
poetry = "^1.7.0"
seaborn = "^0.13.0"
polars = "^0.19.13"
jupyterlab-lsp = "^5.0.0"
python-lsp-server = "^1.9.0"
jupyterlab-execute-time = "^3.1.0"
traitlets = "5.9.0"
plotly = "^5.18.0"
lightgbm = "^4.1.0"
xgboost = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
